Fix label wrapping problem by adjusting responsive max-width.

--- a/styles.css
+++ b/styles.css
@@ -259,8 +259,25 @@ button:hover {
 .entryComment {
     width: 100%;
 }
-/* Responsive styles */
-@media (max-width: 800px) {
+/* Responsive styles ///////////////////////////////////////////////*/
+
+@media (max-width: 1150px) {
+    .club .club-fields > div, .team .team-fields > div, 
+    .horse .horse-fields > div, .rider .rider-fields > div,
+    .entry .entry-fields > div {
+        flex: 1 1 calc(33.3333% - 20px);
+    }
+}
+
+@media (max-width: 900px) {
+    .club .club-fields > div, .team .team-fields > div, 
+    .horse .horse-fields > div, .rider .rider-fields > div,
+    .entry .entry-fields > div {
+        flex: 1 1 calc(50% - 20px);
+    }
+}
+
+@media (max-width: 650px) {
     .container {
         padding: 10px;
     }
@@ -277,7 +294,7 @@ button:hover {
     }
 }
 
-/*/////////////////////////////////////////*/
+/* Table /////////////////////////////////////////*/
 
 table {
     width: 100%;
